# hack-miriteam-2023

./: pyproject.toml
fakeupp/: main.py
fakewms/: main.py
synerg/: config.py  db.py  db.sql  main.py  qr.py  stats.py  uppConnect.py
synerg/services/: checkDB.py
