[tool.poetry]
name = "synerg"
version = "0.1.0"
description = ""
authors = ["MSC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
requests = "^2.31.0"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
