[tool.poetry]
name = "synerg"
version = "0.1.0"
description = ""
authors = ["MSC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
requests = "^2.31.0"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
aiosqlite = "^0.19.0"
aiofiles = "^23.2.1"
pytz = "^2023.3.post1"
opencv-python = "^4.8.1.78"
numpy = "^1.26.2"
qreader = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
